# Copyright (c) 2020 Leedehai. All rights reserved.
# Use of this source code is governed under the LICENSE.txt file.
# -----
# The build rules for embedder projects which use GN as the
# meta-build system.

source_set("sblz") {
  public = [
    "include/sblz/sblz.h"
  ]
  sources = [
    "src/common.h",
    "src/demangler.cc",
    "src/symbolizer.cc",
  ]
}
